--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="images/main-visual1.png" alt="m-1"></div>
-          <div class="swiper-slide"><img src="images/main-visual2.png" alt="m-2"></div>
-          <div class="swiper-slide"><img src="images/main-visual3.png" alt="m-3"></div>
+          <div class="swiper-slide"><img src="images/main-visual1.jpg" alt="m-1"></div>
+          <div class="swiper-slide"><img src="images/main-visual2.jpg" alt="m-2"></div>
+          <div class="swiper-slide"><img src="images/main-visual3.jpg" alt="m-3"></div>
         </div>
         <!-- page -->
         <div class="swiper-pagination"></div>
@@ -142,7 +142,7 @@
         <div class="con1">
             <div class="image">
                 <h1>
-                <img src="images/content-1.png" alt="c-1">
+                <img src="images/content-1.jpg" alt="c-1">
             </h1>
             </div>
             <div class="text">
@@ -160,7 +160,7 @@
         </div>
         <div class="con2">
             <div class="image">
-                <img src="images/content-2.png" alt="c-2">
+                <img src="images/content-2.jpg" alt="c-2">
             </div>
             <div class="text">
                 <div class="logo-img">
@@ -182,7 +182,7 @@
         <div class="count">
             <div class="circle">
                     <a href="#">
-                        <img src="images/location.png" alt="지역">
+                        <img src="images/location.jpg" alt="지역">
                     </a>
             </div>
             <h1 class="number" data-num="11" data-speed="30">0</h1>
@@ -191,7 +191,7 @@
         <div class="count">
             <div class="circle">
                     <a href="#">
-                        <img src="images/hospital.png" alt="병원">
+                        <img src="images/hospital.jpg" alt="병원">
                     </a>
             </div>
             <h1 class="number" data-num="91" data-speed="5">0</h1>
@@ -200,7 +200,7 @@
         <div class="count">
             <div class="circle">
                     <a href="#">
-                        <img src="images/people.png" alt="멤버">
+                        <img src="images/people.jpg" alt="멤버">
                     </a>
             </div>
             <h1 class="number" data-num="1200" data-speed="0.5">0</h1>
